# ARES

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  README.md  install.sh  mkdocs.yml
.github/workflows/: docs.yml
docs/: index.md  overview.md
docs/about/: acknowledgements.md  index.md  license.md
docs/development/: contributing.md  index.md  structure.md  testing.md
docs/getting-started/: index.md  installation.md  quick-start.md
docs/overrides/: home.html
docs/stylesheets/: extra.css
docs/theory/: governing-equations.md  index.md  numerics.md  preconditioning.md  riemann-solvers.md  thermo.md  time-integration.md  turbulence.md
docs/user/: boundary-conditions.md  index.md  initial-conditions.md  input.md  registry.md  using.md
docs/vv/: 2D-flat-plate-turbulent.md  htd.md  index.md  prt-correction.md
src/app/: CMakeLists.txt  docgen.f90  main.f90
src/lib/: CMakeLists.txt
src/lib/base/: Advanced_Types_m.f90  Base_Types_m.f90  Global_m.f90  Parameters_m.f90  Series_Data_m.f90
src/lib/config/: Assign_Setup.f90  Backend_INI.f90  Config_Types_m.f90  Read_Ini.f90  Register_IO.f90  Register_Numerics.f90  Register_Physics.f90  Register_Sim_Param.f90  Registry.f90
src/lib/diagnostic/: Mod_Diagnostic.f90
src/lib/driver/: Mod_Allocate_Data.f90  Procedures_m.f90  Wrap_Postprocess.f90  Wrap_Setup.f90  Wrap_Solve.f90
src/lib/io/: IO_BC.f90  IO_Probes.f90  IO_Solution.f90  IO_Wall.f90  Load_ThermoTransport.f90
src/lib/numerics/fluxes/: Lib_Convective.f90  Lib_Diffusive.f90  Mod_Fluxes.f90
src/lib/numerics/fluxes/bc/: Lib_BC_Fluxes.f90  Lib_BC_Fluxes_Connection.f90  Lib_BC_Fluxes_Extrapolation.f90  Lib_BC_Fluxes_Inflow.f90  Lib_BC_Fluxes_Outflow.f90  Lib_BC_Fluxes_Rotational.f90  Lib_BC_Fluxes_Symmetry.f90  Lib_BC_Fluxes_Wall_Heat.f90  Lib_BC_Fluxes_Wall_Temperature.f90  Mod_BC_Fluxes.f90
src/lib/numerics/fluxes/riemann/: Lib_Riemann_HLL.f90  Lib_Riemann_LF.f90  Mod_Riemann.f90
src/lib/numerics/multigrid/: Lib_Multigrid.f90  Mod_Multigrid.f90
src/lib/numerics/space/: Lib_Ghost.f90  Lib_Limiters.f90  Lib_Metrics.f90  Lib_Reconstruction.f90  Mod_Metrics.f90  Mod_Space.f90
src/lib/numerics/time/: Mod_dt.f90
src/lib/numerics/time/explicit/: Lib_IRS.f90  Lib_Newstate.f90  Lib_Preconditioning.f90  Lib_RK.f90  Mod_Explicit.f90  Mod_Newstate.f90
src/lib/parallel/: Mod_GhostExchange.f90  Mod_MPI.f90
src/lib/physics/: Lib_Prt_Correction.f90
src/lib/physics/turbulence/: Lib_Fluid.f90  Lib_QCR2000.f90  Lib_RANS.f90  Lib_SSGLRR.f90  Lib_SST.f90  Lib_Spalart.f90  Lib_SpalartShur.f90  Lib_Wilcox2006.f90  Mod_RANS.f90
src/test/: CMakeLists.txt
test/Flat_Plate_SA/: input.ini  validate_sa.py
test/Flat_Plate_SGGLRR/: input.ini  set_constant_cp.py  validate_sgglrr.py
test/Flat_Plate_SST/: ARES.sh  input.ini  validate_sst.py
test/Flat_Plate_SST/MESH/: mesh.tec
test/Flat_Plate_Wilcox2006/: input.ini  set_constant_transport.py  validate_wilcox2006.py
test/HTD/: input.ini
test/HTD/MESH/: mesh.tec
test/HTD/reference/: validate_htd.py
test/Prt-correction/: input.ini  make-ares-table.py  validate_Prt_correction.py
test/Prt-correction/MESH/: mesh.tec
test/common/: Extract1D.f90  _fp_turb_common.py  extract1d
